# partial_compact_codex

./: .gitignore  .gitmodules  Cargo.toml  README.md
assets/prompts/: current-session-message-ids-tool-description.md  current-session-message-ids.md  partial-compact-arg-ranges.md  partial-compact-instruction-pointer.md  partial-compact-instruction-tool-description.md  partial-compact-instruction.md  partial-compact-range-from-message-id.md  partial-compact-range-summary.md  partial-compact-range-to-message-id.md  partial-compact-reminder.md  partial-compact-tool-description.md  tui-partial-compact.md
docs/: README.md  architecture.md  cleanup.md  codex-wrapper-poc.md  demo.md  design.md  kv-cache.md  sessions.md
docs/opencode-transfer/: README.md  control-flow.md  mechanism.md  rust-transfer.md  user-visible-path.md
scripts/: pcodx_codex_like_demo.sh  pcodx_demo_8248.sh  pcodx_real_codex_proxy_demo.sh
src/: lib.rs  main.rs  prompts.rs  proxy.rs  storage.rs  tool_endpoint.rs
