[package]
name = "partial_compact_codex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Codex partial-compaction wrapper prototype."

[[bin]]
name = "pcodx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }

[dev-dependencies]
tempfile = "3.20.0"
